Fix minor spacing issues.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -111,6 +111,7 @@ header{
 img{
     max-width: 100%;
     max-height: 100%;
+    width: 100%;
 }
 ul{
     font-size: 20px;
